# agent_infra_demo

./: .cursorignore  .pre-commit-config.yaml  AGENTS.md  Idea.md  Makefile  README.md  pyproject.toml
.cursor/rules/: general.mdc  python.mdc  security.mdc  testing.mdc
docs/: agent-workflow.md  architecture.md  harness-guide.md  progress.md
scripts/: check-no-secrets.sh  check-no-todo.sh
src/agent_infra_demo/: __init__.py
